# fastapi-chat

./: .env.example  makefile  pyproject.toml
app/application/api/: main.py
app/domain/entities/: base.py  messages.py
app/domain/events/: messages.py
app/domain/exceptions/: messages.py
app/domain/values/: base.py  messages.py
app/tests/domain/values/: test_messages.py
docker_compose/: app.yaml
