[tool.poetry]
name = "fastapi-ddd-kafka-ws"
version = "0.1.0"
description = ""
authors = ["cvoluj <berezanskiydaniiil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
motor = "^3.4.0"
uvicorn = {extras = ["all"], version = "^0.29.0"}
ipython = "^8.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
